--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
 
       <div class="box-left2">
 
-        <img src="img/untitled.jpg"  style=" width: 490px; height: 250px;">
+        <img src="img/htma.jpg"  style=" width: 490px; height: 250px;">
 
       <div class="box-layer">
         <h4>Music academy</h4>
